--- a/lazygit/state.yml
+++ b/lazygit/state.yml
@@ -1,8 +1,13 @@
 lastupdatecheck: 0
 recentrepos:
-- /Users/abelcin/Code/ignx-wasm/src/IgnitionXRustBundle
-- /Users/abelcin/Code/IgnitionXOnMac/ignite
 startuppopupversion: 5
-customcommandshistory: []
+lastversion: 0.41.0
+customcommandshistory:
+- q
 hidecommandlog: false
 ignorewhitespaceindiffview: false
+diffcontextsize: 3
+localbranchsortorder: recency
+remotebranchsortorder: alphabetical
+gitlogorder: topo-order
+gitlogshowgraph: always
